--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "start": "ace start",
     "prebuild": "rimraf dist && yarn copy:package",
     "build": "tsc",
-    "build:standalone": "ace bundle",
+    "build:standalone": "ace bundle && cpx dev/_redirects target/webapp/",
     "publish:npm": "yarn build && npm publish dist",
     "m2": "yarn install:m2",
     "watch": "ts-node -P ./tsconfig.json ./dev/index.tsx"
