--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "4.3.5",
     "@types/react-select": "3.0.2",
+    "@types/socket.io": "2.1.3",
+    "@types/socket.io-client": "1.4.32",
     "@types/styled-components": "4.0.3",
-    "@connexta/ace": "git://github.com/connexta/ace.git#6f1c389898a1ee94aac54b9e7d5b1073a8b5853b",
+    "@connexta/ace": "git://github.com/andrewkfiedler/ace.git#e0267416f6bdc5f1de30dbf4f20729ad32f95e01",
     "@connexta/eslint-config-connexta": "git://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
     "chokidar": "3.0.2",
     "cpx": "1.5.0",
+    "express": "4.17.1",
     "lodash.debounce": "4.0.8",
     "rimraf": "3.0.0",
+    "socket.io": "2.3.0",
+    "socket.io-client": "2.3.0",
     "ts-node": "8.3.0",
     "typescript": "3.5.3"
   },
@@ -48,13 +53,15 @@
   },
   "scripts": {
     "copy:package": "cpx package.json dist && cpx \"src/**/!(*.tsx)\" \"dist/src\"",
-    "start": "ace start",
+    "start": "ace start && yarn capture:mocks",
+    "start:netlify": "ace start --env netlify",
     "prebuild": "rimraf dist && yarn copy:package",
     "build": "tsc",
-    "build:standalone": "ace bundle",
+    "build:standalone": "ace bundle --env netlify && cpx dev/_redirects target/webapp/",
     "publish:npm": "yarn build && npm publish dist",
     "m2": "yarn install:m2",
-    "watch": "ts-node -P ./tsconfig.json ./dev/index.tsx"
+    "capture:mocks": "ts-node -P ./tsconfig.json ./dev/capture-mocks.tsx",
+    "watch": "ts-node -P ./tsconfig.json ./dev/watch.tsx"
   },
   "ace": {
     "whitelist": [],
