--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/socket.io": "2.1.3",
     "@types/socket.io-client": "1.4.32",
     "@types/styled-components": "4.0.3",
-    "@connexta/ace": "git://github.com/andrewkfiedler/ace.git#e0267416f6bdc5f1de30dbf4f20729ad32f95e01",
+    "@connexta/ace": "git://github.com/connexta/ace.git#f0beb45ee163cad90bd17911796f9a18150682bc",
     "@connexta/eslint-config-connexta": "git://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
     "chokidar": "3.0.2",
     "cpx": "1.5.0",
