--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "16.8.6",
     "react-router-dom": "5.1.2",
     "styled-components": "4.3.2",
+    "scroll-into-view-if-needed": "2.2.20",
     "yup": "0.27.0"
   },
   "scripts": {
