--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@connexta/kanri",
-  "author": "connexta",
+  "author": "connextas",
   "description": "An administration UI for DDF",
   "version": "0.0.7",
   "license": "LGPL-3.0",
