Updates context path to be /

--- a/package.json
+++ b/package.json
@@ -85,5 +85,5 @@
     "@types/react-dom": "16.8.4",
     "@types/react-router": "5.1.4"
   },
-  "context-path": "/admin/beta"
+  "context-path": "/"
 }
