--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "main": "src/main/webapp/main.js",
   "resolutions": {
     "core-js": "2.6.9",
+    "@material-ui/styles": "4.4.1",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/react-router": "5.1.4"
