--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
   },
   "dependencies": {
     "@connexta/atlas": "0.0.46",
+    "@material-ui/core": "4.4.1",
+    "@material-ui/icons": "4.4.1",
+    "@material-ui/lab": "4.0.0-alpha.26",
+    "@material-ui/pickers": "3.2.2",
+    "@material-ui/styles": "4.5.0",
     "dropzone": "5.5.1",
     "font-awesome": "4.7.0",
     "formik": "1.5.8",
@@ -68,17 +73,20 @@
   },
   "ace": {
     "whitelist": [],
-    "resolve": [
-      "react",
-      "react-dom"
-    ]
+    "resolve": {
+      "react": "react",
+      "react-dom$": "react-dom",
+      "@material-ui/core/Modal": "@material-ui/core/Modal",
+      "@material-ui/styles": "@material-ui/styles",
+      "@material-ui/core/styles": "@material-ui/core/styles"
+    }
   },
   "files": [
     "src/main/webapp",
     "target/webapp",
     "src/main/resources"
   ],
-  "main": "src/main/webapp/main.js",
+  "main": "src/main/webapp/main.tsx",
   "resolutions": {
     "core-js": "2.6.9",
     "@material-ui/styles": "4.4.1",
