--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
     "typescript": "3.5.3"
   },
   "dependencies": {
-    "@connexta/atlas": "0.0.46",
+    "@connexta/atlas": "0.0.47",
+    "@material-ui/core": "4.4.1",
+    "@material-ui/icons": "4.4.1",
+    "@material-ui/lab": "4.0.0-alpha.26",
+    "@material-ui/pickers": "3.2.2",
+    "@material-ui/styles": "4.5.0",
     "dropzone": "5.5.1",
     "font-awesome": "4.7.0",
     "formik": "1.5.8",
@@ -68,17 +73,17 @@
   },
   "ace": {
     "whitelist": [],
-    "resolve": [
-      "react",
-      "react-dom"
-    ]
+    "resolve": {
+      "react": "react",
+      "react-dom$": "react-dom"
+    }
   },
   "files": [
     "src/main/webapp",
     "target/webapp",
     "src/main/resources"
   ],
-  "main": "src/main/webapp/main.js",
+  "main": "src/main/webapp/components/entry/default-entry.tsx",
   "resolutions": {
     "core-js": "2.6.9",
     "@material-ui/styles": "4.4.1",
