Update types to match deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "emitDecoratorMetadata": true
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "dist", "dev"]
+  "exclude": ["node_modules", "dist", "dev", "target"]
 }
