--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type": "git",
     "url": "https://github.com/connexta/kanri.git"
   },
+  "private": true,
   "engines": {
     "node": ">=0.10.5"
   },
@@ -33,6 +34,7 @@
     "chokidar": "3.0.2",
     "cpx": "1.5.0",
     "express": "4.17.1",
+    "json": "9.0.6",
     "lodash.debounce": "4.0.8",
     "notistack": "0.9.11",
     "querystring": "0.2.0",
@@ -74,7 +76,7 @@
     "yup": "0.27.0"
   },
   "scripts": {
-    "copy:package": "cpx package.json dist && cpx \"src/**/!(*.tsx)\" \"dist/src\"",
+    "copy:package": "cpx package.json dist && json -I -f dist/package.json -e 'this.private=false' && cpx \"src/**/!(*.tsx)\" \"dist/src\"",
     "start": "ace start",
     "start:capture": "ace start --env capture & yarn capture:mocks",
     "start:mocks": "ace start --env mocks",
