--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/socket.io": "2.1.3",
     "@types/socket.io-client": "1.4.32",
     "@types/styled-components": "4.0.3",
-    "@connexta/ace": "git://github.com/connexta/ace.git#11b2b09ed9845f070c4dc14800fc8bcabd00184b",
+    "@connexta/ace": "git://github.com/andrewkfiedler/ace.git#b9e2d582cee8b1e60be015785ec7ec01d4f12b68",
     "@connexta/eslint-config-connexta": "git://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
     "chokidar": "3.0.2",
     "cpx": "1.5.0",
@@ -76,7 +76,7 @@
     "yup": "0.27.0"
   },
   "scripts": {
-    "copy:package": "cpx package.json dist && json -I -f dist/package.json -e 'this.private=false' && cpx \"src/**/!(*.tsx)\" \"dist/src\"",
+    "copy:package": "cpx package.json dist && json -I -f dist/package.json -e 'this.private=false' && cpx \"src/**/!(*.tsx)\" \"dist/src\" && cpx \"dev/**/!(*.tsx)\" \"dist/dev\"",
     "start": "ace start",
     "start:capture": "ace start --env capture & yarn capture:mocks",
     "start:mocks": "ace start --env mocks",
