--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@types/socket.io": "2.1.3",
     "@types/socket.io-client": "1.4.32",
     "@types/styled-components": "4.0.3",
-    "@connexta/ace": "git://github.com/connexta/ace.git#11b2b09ed9845f070c4dc14800fc8bcabd00184b",
-    "@connexta/eslint-config-connexta": "git://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
+    "@connexta/ace": "git+https://github.com/connexta/ace.git#11b2b09ed9845f070c4dc14800fc8bcabd00184b",
+    "@connexta/eslint-config-connexta": "git+https://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
     "chokidar": "3.0.2",
     "cpx": "1.5.0",
     "express": "4.17.1",
@@ -70,7 +70,7 @@
     "fuse.js": "3.4.5",
     "iframe-resizer": "4.1.1",
     "lodash.throttle": "4.1.1",
-    "@connexta/logviewer": "git://github.com/connexta/logviewer.git#81784420e24eb19d7584e5ee9a73789518d3e6aa",
+    "@connexta/logviewer": "git+https://github.com/connexta/logviewer.git#81784420e24eb19d7584e5ee9a73789518d3e6aa",
     "prop-types": "15.7.2",
     "scroll-into-view-if-needed": "2.2.20",
     "yup": "0.27.0"
