--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@connexta/kanri",
   "author": "connexta",
   "description": "An administration UI for DDF",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "license": "LGPL-3.0",
   "keywords": [],
   "repository": {
@@ -29,8 +29,8 @@
     "@types/socket.io": "2.1.3",
     "@types/socket.io-client": "1.4.32",
     "@types/styled-components": "4.0.3",
-    "@connexta/ace": "git://github.com/andrewkfiedler/ace.git#b9e2d582cee8b1e60be015785ec7ec01d4f12b68",
-    "@connexta/eslint-config-connexta": "git://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
+    "@connexta/ace": "git+https://github.com/andrewkfiedler/ace.git#b9e2d582cee8b1e60be015785ec7ec01d4f12b68",
+    "@connexta/eslint-config-connexta": "git+https://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
     "chokidar": "3.0.2",
     "cpx": "1.5.0",
     "express": "4.17.1",
@@ -66,14 +66,14 @@
   },
   "dependencies": {
     "dropzone": "5.5.1",
-    "formik": "1.5.8",
+    "formik": "2.3.3",
     "fuse.js": "3.4.5",
     "iframe-resizer": "4.1.1",
     "lodash.throttle": "4.1.1",
-    "@connexta/logviewer": "git://github.com/connexta/logviewer.git#81784420e24eb19d7584e5ee9a73789518d3e6aa",
+    "@connexta/logviewer": "git+https://github.com/connexta/logviewer.git#c55ba445e875d3aa99afc8aa9cbec0037c787fa3",
     "prop-types": "15.7.2",
     "scroll-into-view-if-needed": "2.2.20",
-    "yup": "0.27.0"
+    "yup": "1.4.0"
   },
   "scripts": {
     "copy:package": "cpx package.json dist && json -I -f dist/package.json -e 'this.private=false' && cpx \"src/**/!(*.tsx)\" \"dist/src\" && cpx \"dev/**/!(*.tsx)\" \"dist/dev\"",
