Update to use the latest ace

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "lib": ["es2015", "dom"],
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist", "dev", "target"]
