Add sources editing to the app
- This allows us to remove a dependency at runtime and have better control of source editing / display

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@types/styled-components": "4.0.3",
     "@connexta/ace": "git+https://github.com/connexta/ace.git#37a0052298d788aff5836551a4d578a758ea3575",
     "@connexta/eslint-config-connexta": "git+https://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
+    "autoprefixer": "10.4.20",
     "chokidar": "3.0.2",
     "cpx": "1.5.0",
     "express": "4.17.1",
     "json": "9.0.6",
     "lodash.debounce": "4.0.8",
     "notistack": "0.9.11",
+    "postcss-focus-visible": "8.0.2",
     "querystring": "0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -49,6 +51,7 @@
     "socket.io": "2.3.0",
     "socket.io-client": "2.3.0",
     "styled-components": "5.1.0",
+    "tailwindcss": "3.4.17",
     "ts-node": "8.3.0",
     "url": "0.11.0"
   },
@@ -58,13 +61,16 @@
     "@material-ui/lab": "4.0.0-alpha.51",
     "@material-ui/pickers": ">=3",
     "notistack": ">=0",
+    "postcss-focus-visible": ">=8",
     "react": ">=16",
     "react-dom": ">=16",
     "react-select": ">=3",
     "react-router-dom": ">=5",
-    "styled-components": ">=5"
+    "styled-components": ">=5",
+    "tailwindcss": ">=3"
   },
   "dependencies": {
+    "autoprefixer": ">=10",
     "dropzone": "5.5.1",
     "formik": "2.3.3",
     "fuse.js": "3.4.5",
