--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/socket.io": "2.1.3",
     "@types/socket.io-client": "1.4.32",
     "@types/styled-components": "4.0.3",
+    "@types/traverse": "0.6.37",
     "@types/validator": "13.12.2",
     "@connexta/ace": "git+https://github.com/connexta/ace.git#37a0052298d788aff5836551a4d578a758ea3575",
     "@connexta/eslint-config-connexta": "git+https://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
@@ -81,11 +82,13 @@
     "dropzone": "5.5.1",
     "formik": "2.3.3",
     "fuse.js": "3.4.5",
+    "golden-layout": "1.5.9",
     "iframe-resizer": "4.1.1",
     "lodash.throttle": "4.1.1",
     "@connexta/logviewer": "git+https://github.com/connexta/logviewer.git#c55ba445e875d3aa99afc8aa9cbec0037c787fa3",
     "prop-types": "15.7.2",
     "scroll-into-view-if-needed": "2.2.20",
+    "traverse": "0.6.11",
     "yup": "1.4.0"
   },
   "scripts": {
