Move around dependencies, and upgrade react-ace

--- a/package.json
+++ b/package.json
@@ -35,33 +35,24 @@
     "@types/validator": "13.12.2",
     "@connexta/ace": "git+https://github.com/connexta/ace.git#37a0052298d788aff5836551a4d578a758ea3575",
     "@connexta/eslint-config-connexta": "git+https://github.com/connexta/eslint-config-connexta.git#3f0caece6210d25c16863d472026fbfa069521a6",
-    "autoprefixer": "10.4.20",
     "chokidar": "3.0.2",
-    "cpx": "1.5.0",
+    "cpy": "11.1.0",
+    "cpy-cli": "5.0.0",
     "express": "4.17.1",
-    "immutable": "3.8.2",
-    "json": "9.0.6",
+    "json": "11.0.0",
     "lodash.debounce": "4.0.8",
     "notistack": "0.9.11",
-    "postcss-focus-visible": "8.0.2",
     "querystring": "0.2.0",
     "react": "16.13.1",
-    "react-ace": "4.4.0",
     "react-dom": "16.13.1",
     "react-select": "3.1.0",
-    "react-redux": "5.1.1",
     "react-router-dom": "5.1.2",
-    "redux": "3.7.2",
-    "redux-immutable": "3.1.0",
-    "redux-thunk": "2.4.2",
     "rimraf": "3.0.0",
     "socket.io": "2.3.0",
     "socket.io-client": "2.3.0",
     "styled-components": "5.1.0",
-    "tailwindcss": "3.4.17",
     "ts-node": "8.3.0",
-    "url": "0.11.0",
-    "validator": "13.12.0"
+    "url": "0.11.0"
   },
   "peerDependencies": {
     "@material-ui/core": ">=4",
@@ -78,27 +69,39 @@
     "tailwindcss": ">=3"
   },
   "dependencies": {
-    "autoprefixer": ">=10",
+    "ace-builds": "1.39.0",
+    "autoprefixer": "10.4.20",
     "dropzone": "5.5.1",
     "formik": "2.3.3",
     "fuse.js": "3.4.5",
     "golden-layout": "1.5.9",
     "iframe-resizer": "4.1.1",
+    "immutable": "3.8.2",
     "lodash.throttle": "4.1.1",
     "@connexta/logviewer": "git+https://github.com/connexta/logviewer.git#c55ba445e875d3aa99afc8aa9cbec0037c787fa3",
+    "postcss-focus-visible": "8.0.2",
     "prop-types": "15.7.2",
+    "react-ace": "14.0.1",
+    "react-redux": "5.1.1",
+    "redux": "3.7.2",
+    "redux-immutable": "3.1.0",
+    "redux-thunk": "2.4.2",
     "scroll-into-view-if-needed": "2.2.20",
+    "tailwindcss": "3.4.17",
     "traverse": "0.6.11",
+    "validator": "13.12.0",
     "yup": "1.4.0"
   },
   "scripts": {
-    "copy:package": "cpx package.json dist && json -I -f dist/package.json -e 'this.private=false' && cpx \"src/**/!(*.tsx)\" \"dist/src\" && cpx \"dev/**/!(*.tsx)\" \"dist/dev\"",
     "start": "ace start",
     "start:capture": "ace start --env capture & yarn capture:mocks",
     "start:mocks": "ace start --env mocks",
-    "prebuild": "rimraf dist && yarn copy:package",
-    "build": "tsc",
+    "build": "yarn publish:build",
     "build:mocks": "ace bundle --env mocks",
+    "publish:cpx-package": "cpy package.json dist && json -I -f dist/package.json -e 'this.private=false'",
+    "publish:cpx-src": "cpy \"src/**/*\" \"!src/**/*.tsx\" \"!src/**/*.ts\" dist/src",
+    "publish:cpx-current": "cpy \"./*\" dist --verbose",
+    "publish:build": "rimraf dist && yarn publish:cpx-src && yarn publish:cpx-current && tsc && yarn publish:cpx-package",
     "publish:npm": "yarn build && npm publish dist",
     "m2": "yarn install:m2",
     "capture:mocks": "ts-node -P ./tsconfig.json ./dev/capture-mocks.tsx",
